--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -17,7 +17,7 @@
 		<a href="" title="n/a">
 		<br>
 
-		<a href ="https://github.com/BurningS0ul/EIA2_WiSe2022" title = "failsafe"> Github Repository
+		<a href ="https://github.com/BurningS0ul/EIA2_WiSe2022" title = "failsafe" target = "_blank"> Github Repository
 		
 	</body>
 </html>
