--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -1,23 +1,46 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8" />
-		<title>Arthur Aguiar Rafael</title>
-		<style>
-			body {
-				font-family: 'Courier New', Courier, monospace;
-				font-size: 16pt;
-				background: rgb(24, 21, 21);
-				text-align: center;
-			}
-		</style>
-	</head>
-	<body>
-		
-		<a href="" title="n/a">
-		<br>
+<html lang="en">
 
-		<a href ="https://github.com/BurningS0ul/EIA2_WiSe2022" title = "failsafe" target = "_blank"> Github Repository
-		
-	</body>
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<style>
+		@font-face {
+			font-family: 'KH2 ALL MENU';
+			src: url('./Aufgaben/00-Steckbrief/KH2ALLMENUItalic.eot');
+			src: url('./Aufgaben/00-Steckbrief/KH2ALLMENUItalic.eot?#iefix') format('embedded-opentype'),
+				url('./Aufgaben/00-Steckbrief/KH2ALLMENUItalic.woff2') format('woff2'),
+				url('./Aufgaben/00-Steckbrief/KH2ALLMENUItalic.woff') format('woff'),
+				url('./Aufgaben/00-Steckbrief/KH2ALLMENUItalic.svg#KH2ALLMENUItalic') format('svg');
+			font-weight: normal;
+			font-style: italic;
+			font-display: swap;
+		}
+
+		body {
+			margin: 5%;
+			background: #1a1a1a;
+			text-align: center;
+			font-family: 'KH2 ALL MENU';
+		}
+
+		a {
+			color: #14aecc;
+		}
+	</style>
+</head>
+
+<body>
+	
+	<a href="./Aufgaben/01-RandPoem/RandPoem.html" title="#01" target="_blank"> Aufgabe 1 </a>
+
+	<br>
+
+	<footer>
+		<a href="https://github.com/BurningS0ul/EIA2_WiSe2022" title="Repository" target="_blank"> Github Repository
+		</a>
+	</footer>
+</body>
+
 </html>
