--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -21,23 +21,29 @@
 		body {
 			margin: 5%;
 			background: #1a1a1a;
+			color: #14aecc;
 			text-align: center;
 			font-family: 'KH2 ALL MENU';
 		}
 
-		a {
-			color: #14aecc;
+		.dummy {
+			color: #137b90;
+			font-size: smaller;
 		}
 	</style>
 </head>
 
 <body>
-	
-	<a href="./Aufgaben/01-RandPoem/RandPoem.html" title="#01" target="_blank"> Aufgabe 1 </a>
 
+	<a href="./Aufgaben/01-RandPoem/RandPoem.html" title="#01" target="_blank"> Aufgabe 1 </a>
+	<br>
+	<a class="dummy" href="./Aufgaben/01-RandPoem/extra/Tracetable_Aktivitätsdiagramm.png" title="TT/AD"
+		target="_blank">
+		Tracetable + Aktivitätsdiagramm </a>
 	<br>
 
 	<footer>
+		<br>
 		<a href="https://github.com/BurningS0ul/EIA2_WiSe2022" title="Repository" target="_blank"> Github Repository
 		</a>
 	</footer>
