--- a/Aufgaben/02-EventInspector/mainUI.html
+++ b/Aufgaben/02-EventInspector/mainUI.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./UI.css">
+    <script src="./eventInspect.js"> </script>
     <title>EventInspector</title>
 </head>
 
@@ -18,7 +19,7 @@
         <div class="div1"></div>
     </div>
 
-    <span class="spanA">SPAM</span>
+    <span id="spanA"> SPAM </span>
 </body>
 
 </html>
