--- a/Aufgaben/02-EventInspector/mainUI.html
+++ b/Aufgaben/02-EventInspector/mainUI.html
@@ -14,7 +14,7 @@
     <h1>Events-Exercise</h1>
     <div>
         <div class="div0">
-            <button></button>
+            <button> Button </button>
         </div>
         <div class="div1"></div>
     </div>
