--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -24,11 +24,13 @@
 			color: #14aecc;
 			text-align: center;
 			font-family: 'KH2 ALL MENU';
+			font-size: medium;
 		}
 
 		.dummy {
 			color: #137b90;
-			font-size: smaller;
+			font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+			font-size: xx-small;
 		}
 	</style>
 </head>
@@ -39,7 +41,10 @@
 	<br>
 	<a class="dummy" href="./Aufgaben/01-RandPoem/extra/Tracetable_Aktivitätsdiagramm.png" title="TT/AD"
 		target="_blank">
-		Tracetable + Aktivitätsdiagramm </a>
+		(Tracetable + Aktivitätsdiagramm) </a>
+	<br>
+
+	<a href="./Aufgaben/02-EventInspector/mainUI.html" title="#02" target="_blank"> Aufgabe 2 </a>
 	<br>
 
 	<footer>
