--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -47,6 +47,9 @@
 	<a href="./Aufgaben/02-EventInspector/mainUI.html" title="#02" target="_blank"> Aufgabe 2 </a>
 	<br>
 
+	<a href="./Aufgaben/03-Einkaufsliste/list.html" title="#03" target="_blank"> Aufgabe 3 </a>
+	<br>
+
 	<footer>
 		<br>
 		<a href="https://github.com/BurningS0ul/EIA2_WiSe2022" title="Repository" target="_blank"> Github Repository
