--- a/Aufgaben/03-Einkaufsliste/list.html
+++ b/Aufgaben/03-Einkaufsliste/list.html
@@ -16,7 +16,7 @@
     <div class="nav"></div>
     <div class="store">
         <div class="stock">
-            <div class="item">
+            <form>
                 <input class="num" type="number" id="quantity" name="quantity" min="1" max="99" placeholder="0">
                 <input class="name" type="text" placeholder="name">
                 <select id="category">
@@ -40,7 +40,7 @@
                 </select>
                 <input class="comment" type="text" placeholder="comment">
                 <input class="submit" type="submit" value="Submit">
-            </div>
+            </form>
         </div>
         <div class="shelves">
             <div class="title">
@@ -53,18 +53,14 @@
                 <button class="delete">Delete all</button>
             </div>
             <div id="category">
-                <div class="item">
-                    <input class="check" type="checkbox">
-                    <fieldset id="amount"></fieldset>
-                    <fieldset id="name"></fieldset>
-                    <fieldset id="category"></fieldset>
-                    <fieldset id="comment"></fieldset>
-                </div>
+                <div class="item"></div>
             </div>
         </div>
     </div>
     <footer>
-        <a href="./Einkaufsliste_Konzept_v2.0.png" target="_blank">Konzept</a>
+        <a href="./Einkaufsliste v2.0.png" target="_blank">Konzept(updated)</a><br>
+        <a href="./Use-case.png" target="_blank">Use-case</a>
+        <p>i give up</p>
     </footer>
 </body>
 
