--- a/Aufgaben/03-Einkaufsliste/list.html
+++ b/Aufgaben/03-Einkaufsliste/list.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <script type="text/javascript" src="./store.js"></script>
-    <script type="text/javascript" src="./data.js"></script>
+    <script type="text/javascript" src="./generateContent.js"></script>
     <title>Einkaufsliste</title>
 </head>
 
@@ -39,7 +39,7 @@
                     <option name="etc"> Own Items </option>
                 </select>
                 <input class="comment" type="text" placeholder="comment">
-                <input class="submit" type="submit" value="Submit">
+                <input class="submit" type="button" value="Submit">
             </form>
         </div>
         <div class="shelves">
@@ -60,7 +60,6 @@
     <footer>
         <a href="./Einkaufsliste v2.0.png" target="_blank">Konzept(updated)</a><br>
         <a href="./Use-case.png" target="_blank">Use-case</a>
-        <p>i give up</p>
     </footer>
 </body>
 
