--- a/Aufgaben/03-06-Einkaufsliste/list.html
+++ b/Aufgaben/03-06-Einkaufsliste/list.html
@@ -60,6 +60,7 @@
     <footer>
         <a href="./Einkaufsliste v2.0.png" target="_blank">Konzept(updated)</a><br>
         <a href="./Use-case.png" target="_blank">Use-case</a>
+        <input id="DEBUG" type="button" value="DEBUG">
     </footer>
 </body>
 
