--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -19,7 +19,7 @@
 		}
 
 		body {
-			margin: 5%;
+			margin: 1%;
 			background: #1a1a1a;
 			color: #14aecc;
 			text-align: center;
@@ -27,11 +27,6 @@
 			font-size: medium;
 		}
 
-		.dummy {
-			color: #137b90;
-			font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-			font-size: xx-small;
-		}
 	</style>
 </head>
 
@@ -39,15 +34,11 @@
 
 	<a href="./Aufgaben/01-RandPoem/RandPoem.html" title="#01" target="_blank"> Aufgabe 1 </a>
 	<br>
-	<a class="dummy" href="./Aufgaben/01-RandPoem/extra/Tracetable_Aktivitätsdiagramm.png" title="TT/AD"
-		target="_blank">
-		(Tracetable + Aktivitätsdiagramm) </a>
-	<br>
 
 	<a href="./Aufgaben/02-EventInspector/mainUI.html" title="#02" target="_blank"> Aufgabe 2 </a>
 	<br>
 
-	<a href="./Aufgaben/03-Einkaufsliste/list.html" title="#03" target="_blank"> Aufgabe 3 </a>
+	<a href="./Aufgaben/03-06-Einkaufsliste/list.html" title="#03" target="_blank"> Die Einkaufsliste </a>
 	<br>
 
 	<footer>
