--- a/Aufgaben/03-06-Einkaufsliste/list.html
+++ b/Aufgaben/03-06-Einkaufsliste/list.html
@@ -53,7 +53,11 @@
                 <button class="delete">Delete all</button>
             </div>
             <div id="category">
-                <div class="item"></div>
+                <div class="item">
+                    <input type="checkbox">
+                    <label>Placeholder</label>
+                    <i class="fa-solid fa-trash-can"></i>
+                </div>
             </div>
         </div>
     </div>
