--- a/Aufgaben/03-06-Einkaufsliste/list.html
+++ b/Aufgaben/03-06-Einkaufsliste/list.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <script type="text/javascript" src="./store.js"></script>
-    <script type="text/javascript" src="./generateContent.js"></script>
     <title>Einkaufsliste</title>
 </head>
 
@@ -53,18 +52,14 @@
                 <button class="delete">Delete all</button>
             </div>
             <div id="category">
-                <div class="item">
-                    <input type="checkbox">
-                    <label>Placeholder</label>
-                    <i class="fa-solid fa-trash-can"></i>
-                </div>
+                <div class="item"></div>
             </div>
         </div>
     </div>
     <footer>
-        <a href="./Einkaufsliste v2.0.png" target="_blank">Konzept(updated)</a><br>
+        <a href="./Einkaufsliste v2.0.png" target="_blank">Konzept</a><br>
         <a href="./Use-case.png" target="_blank">Use-case</a>
-        <input id="DEBUG" type="button" value="DEBUG">
+        <a href="./AD.pdf" target="_blank">Activity Diagram</a>
     </footer>
 </body>
 
