--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -38,7 +38,10 @@
 	<a href="./Aufgaben/02-EventInspector/mainUI.html" title="#02" target="_blank"> Aufgabe 2 </a>
 	<br>
 
-	<a href="./Aufgaben/03-06-Einkaufsliste/list.html" title="#03" target="_blank"> Die Einkaufsliste </a>
+	<a href="./Aufgaben/03-06-Einkaufsliste/list.html" title="#03-06" target="_blank"> Die Einkaufsliste </a>
+	<br>
+
+	<a href="./Aufgaben/08-GenerativeArt/art.html" title="#08" target="_blank"> Aufgabe 8.1 </a>
 	<br>
 
 	<footer>
