--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -41,7 +41,10 @@
 	<a href="./Aufgaben/03-06-Einkaufsliste/list.html" title="#03-06" target="_blank"> Die Einkaufsliste </a>
 	<br>
 
-	<a href="./Aufgaben/08-GenerativeArt/art.html" title="#08" target="_blank"> Aufgabe 8.1 </a>
+	<a href="./Aufgaben/08-GenerativeArt/art.html" title="#08.1" target="_blank"> Aufgabe 8.1 </a>
+	<br>
+
+	<a href="./Aufgaben/08.2-GeneratedArtpiece/" title="#08.2" target="_blank"> Aufgabe 8.2 </a>
 	<br>
 
 	<footer>
