--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -44,7 +44,7 @@
 	<a href="./Aufgaben/08-GenerativeArt/art.html" title="#08.1" target="_blank"> Aufgabe 8.1 </a>
 	<br>
 
-	<a href="./Aufgaben/08.2-GeneratedArtpiece/" title="#08.2" target="_blank"> Aufgabe 8.2 </a>
+	<a href="./Aufgaben/08.2-GeneratedArtpiece/artpiece.html" title="#08.2" target="_blank"> Aufgabe 8.2 </a>
 	<br>
 
 	<footer>
