--- a/Aufgaben/08.2-GeneratedArtpiece/artpiece.html
+++ b/Aufgaben/08.2-GeneratedArtpiece/artpiece.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>#08.2</title>
+    <link rel="stylesheet" href="./style.css" />
     <script src="canvas.js"></script>
 </head>
 
 <body>
-    <canvas width=1920 height=1080></canvas>
+    <canvas width=800 height=600></canvas>
 </body>
 
 </html>
