--- a/Aufgaben/08.2-GeneratedArtpiece/artpiece.html
+++ b/Aufgaben/08.2-GeneratedArtpiece/artpiece.html
@@ -14,4 +14,9 @@
     <canvas width=800 height=600></canvas>
 </body>
 
+<footer>
+    <a href="./ActivityDiagram_Canvas.pdf">Activity Diagram</a> <br>
+    <a href="./Konzept_Canvas.pdf">Konzept</a>
+</footer>
+
 </html>
