--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -47,6 +47,9 @@
 	<a href="./Aufgaben/08.2-GeneratedArtpiece/artpiece.html" title="#08.2" target="_blank"> Aufgabe 8.2 </a>
 	<br>
 
+	<a href="./Aufgaben/09.1-Farm/farm.html" title="#09.1" target="_blank"> Aufgabe 9.1 </a>
+	<br>
+
 	<footer>
 		<br>
 		<a href="https://github.com/BurningS0ul/EIA2_WiSe2022" title="Repository" target="_blank"> Github Repository
