--- a/Aufgaben/09.2-BirdhouseClasses/artpiece.html
+++ b/Aufgaben/09.2-BirdhouseClasses/artpiece.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>#08.2</title>
+    <title>#09.2</title>
     <link rel="stylesheet" href="./style.css" />
+    <script src="birds.js"></script>
     <script src="snowflakes.js"></script>
     <script src="canvas.js"></script>
 </head>
