--- a/Aufgaben/09.2-BirdhouseClasses/artpiece.html
+++ b/Aufgaben/09.2-BirdhouseClasses/artpiece.html
@@ -7,9 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>#09.2</title>
     <link rel="stylesheet" href="./style.css" />
-    <script src="birds.js"></script>
-    <script src="snowflakes.js"></script>
-    <script src="canvas.js"></script>
+    <script src="./classes/vector.js"></script>
+    <script src="./classes/birds.js"></script>
+    <script src="./classes/snowflakes.js"></script>
+    <script src="./script/canvas.js"></script>
 </head>
 
 <body>
