--- a/Aufgaben/09.2-BirdhouseClasses/artpiece.html
+++ b/Aufgaben/09.2-BirdhouseClasses/artpiece.html
@@ -18,8 +18,7 @@
 </body>
 
 <footer>
-    <a href="./ActivityDiagram_Canvas.pdf">Activity Diagram</a> <br>
-    <a href="./Konzept_Canvas.pdf">Konzept</a>
+    <a href="./Konzept_Birds.pdf">Konzept</a>
 </footer>
 
 </html>
