--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -50,6 +50,10 @@
 	<a href="./Aufgaben/09.1-Farm/farm.html" title="#09.1" target="_blank"> Aufgabe 9.1 </a>
 	<br>
 
+	<a href="./Aufgaben/09.2-BirdhouseClasses/artpiece.html" title="#09.2" target="_blank"> Aufgabe 9.2 </a>
+	<br>
+
+
 	<footer>
 		<br>
 		<a href="https://github.com/BurningS0ul/EIA2_WiSe2022" title="Repository" target="_blank"> Github Repository
